src/main/java/com/example/post/global/error/exception/ErrorCode.java
package com.example.post.global.error.exception;

import com.fasterxml.jackson.annotation.JsonFormat;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
@JsonFormat(shape = JsonFormat.Shape.OBJECT)
public enum ErrorCode {
    // 게시글 예외
    POST_NOT_FOUND(404, "게시글을 찾을 수 없습니다"),


    // 제너럴
    BAD_REQUEST(400, "Bad Request"),
    INTERNAL_SERVER_ERROR(500, "Internal Server Error");

    private final int status;
    private final String message;
}
